# App-Backwel

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  run-stack.sh  useradminconfig
DataAiAnalitycs/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requeriments.txt
DataAiAnalitycs/Backend/data/: db_connector.py  query_raw_data.py  upload_raw.py
DataAiAnalitycs/Backend/pipelines/: customer_analytics_pipeline.py  pipeline_analysis.py  pipeline_forecast.py  pipeline_raw.py  pipeline_report.py
DataAiAnalitycs/Backend/src/analysis/: anomaly_detection.py  kpis.py  reports.py  satistics.py  transform_analysis.py
DataAiAnalitycs/Backend/src/ingestion/: database_loader.py  readers.py
DataAiAnalitycs/Backend/src/processing/: clean_data.py  jsonParser.py
DataAiAnalitycs/IA/: Dockerfile
DataAiAnalitycs/IA/KNN/: IA_reports.py  feature_engineer.py  knn_recommender.py  knn_trainer.py  model_validator.py  prediction_engine.py  recommendation_engine.py  report_manager.py
DataAiAnalitycs/IA/RegresionLineal/: forecaster.py  interference_engine.py
DataAiAnalitycs/Main/: app.py  assistant.html  reports.html  upload.html
DataAiAnalitycs/Main/reports/: d1288b8a-6e8a-4b73-9200-a60a3ce2d062_report.csv  d1288b8a-6e8a-4b73-9200-a60a3ce2d062_report.json  knn_plot_data.json
DataAiAnalitycs/db/init/: bd.sql  schema_dataAi.sql
DataAiAnalitycs/utils/: Arbol.py  KingNasssirDataSets.py  analysis_db.py  diagnostico.py
api-gateway/: Dockerfile  pom.xml
api-service/: Dockerfile  pom.xml
app-backwel/: .dockerignore  Dockerfile  (+8 more)
(+472 files in other folders)
