[project]
name = "dataaianalitycs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faker>=40.21.0",
    "flask>=3.1.3",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "scikit-learn>=1.7.2",
    "scipy-stubs~=1.15.3",
    "sqlalchemy>=2.0.50",
    "statsmodels>=0.14.6",
]
